# python-gRPC-example

./: README.md
base_site/: Makefile  README.md  pyproject.toml
base_site/src/: README.md  main.py
base_site/src/auth/: token_logic.py
base_site/src/protobuf/: AuthService.proto  AuthService_pb2.py  AuthService_pb2_grpc.py
base_site/src/protobuf/auth/: auth.proto  auth_pb2.py  auth_pb2_grpc.py
base_site/src/protobuf/credentials/: credentials_pb2.py  credentials_pb2_grpc.py
base_site/src/protobuf/register/: register.proto  register_pb2.py  register_pb2_grpc.py
base_site/src/settings/: app_settings.py  exeptions.py
micro-service-auth/: .env.example  Makefile  README.md  pyproject.toml
micro-service-auth/migrations/: env.py
micro-service-auth/migrations/versions/: 4d469ec9cf5a_first_migration.py  a18962a1b0f6_added_account_table.py  b04450eb6fcb_first_migration.py
micro-service-auth/seed/: create_data_test.py
micro-service-auth/src/: README.md  main.py  pyproject.toml
micro-service-auth/src/db/: build_coonector_db.py  connector_for_alembic_and_alchemy.py  db_connector.py
micro-service-auth/src/db/auth_users/: get_user.py
micro-service-auth/src/db/models/: __init__.py  models.py
micro-service-auth/src/db/query_db/: get_user.py
micro-service-auth/src/protobuf/: AuthService_pb2.py
micro-service-auth/src/protobuf/credentials/: credentials.proto
micro-service-auth/src/protobuf/register/: register.proto  register_pb2.py
micro-service-auth/src/rpc/: AuthService_pb2_grpc.py
micro-service-auth/src/rpc_service/: auth_service.py  credentials_service.py  register_service.py  service.py  utils.py
micro-service-auth/src/seed/: create_data_test.py
micro-service-auth/src/settings/: exeptions.py
micro-service-auth/src/users/: depends.py  models.py  repository.py  service.py
