[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aleks-Ti <mti61ro@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
