[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aleks-Ti <mti61ro@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
